# fractran

./: LICENSE  README.md  interpreter.fr  interpreter.frp  to-fractions.py
fracc/: CMakeLists.txt  call.cpp  call.h  exp.cpp  exp.h  fn.cpp  fn.h  fracc.cpp  iffn.cpp  iffn.h  program.cpp  program.h  seqfn.cpp  seqfn.h  simplefn.cpp  simplefn.h  slot.cpp  slot.h  util.h  whilefn.cpp  whilefn.h
interpreter-cpp/: CMakeLists.txt  fns.cpp  fns.h  interpreter.cpp
